--- a/.hintrc
+++ b/.hintrc
@@ -17,6 +17,12 @@
       {
         "frame-title": "off"
       }
+    ],
+    "axe/name-role-value": [
+      "default",
+      {
+        "link-name": "off"
+      }
     ]
   }
 }
